Custom annotation and Input validation check